--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.32",
+    "@fortawesome/free-brands-svg-icons": "5.15.1",
+    "@fortawesome/free-solid-svg-icons": "5.15.1",
+    "@fortawesome/react-fontawesome": "0.1.12",
     "gatsby": "^2.25.3",
-    "gatsby-image": "^2.4.21",
+    "gatsby-background-image": "1.2.0",
+    "gatsby-image": "2.4.21",
+    "gatsby-plugin-breakpoints": "1.2.4",
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-offline": "^3.3.2",
+    "gatsby-plugin-postcss": "3.0.4",
     "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.7.1",
-    "gatsby-source-filesystem": "^2.4.1",
-    "gatsby-transformer-sharp": "^2.5.21",
+    "gatsby-plugin-sharp": "2.7.1",
+    "gatsby-source-filesystem": "2.4.2",
+    "gatsby-transformer-sharp": "2.5.21",
+    "postcss": "8.1.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "1.9.6"
   },
   "devDependencies": {
     "prettier": "2.1.2"
