--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-postcss": "3.0.4",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "2.7.1",
+    "gatsby-plugin-sitemap": "2.8.0",
     "gatsby-source-filesystem": "2.4.2",
     "gatsby-transformer-sharp": "2.5.21",
     "postcss": "8.1.6",
