--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "3.2.18",
     "tailwindcss": "1.9.6"
   },
   "devDependencies": {
