--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/react-fontawesome": "0.1.12",
-    "gatsby": "^2.25.3",
+    "gatsby": "^2.32.13",
     "gatsby-background-image": "1.2.0",
     "gatsby-image": "2.4.21",
     "gatsby-plugin-breakpoints": "1.2.4",
-    "gatsby-plugin-manifest": "^2.5.2",
+    "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.3.2",
     "gatsby-plugin-postcss": "3.0.4",
     "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "2.7.1",
+    "gatsby-plugin-sharp": "^2.14.4",
     "gatsby-plugin-sitemap": "2.8.0",
     "gatsby-source-filesystem": "2.4.2",
-    "gatsby-transformer-sharp": "2.5.21",
+    "gatsby-transformer-sharp": "^2.12.1",
     "postcss": "8.1.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
