--- a/package.json
+++ b/package.json
@@ -5,32 +5,34 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.32",
-    "@fortawesome/free-brands-svg-icons": "5.15.1",
-    "@fortawesome/free-solid-svg-icons": "5.15.1",
-    "@fortawesome/react-fontawesome": "0.1.12",
-    "gatsby": "^2.32.13",
-    "gatsby-background-image": "1.2.0",
-    "gatsby-image": "2.4.21",
-    "gatsby-plugin-breakpoints": "1.2.4",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-offline": "^3.3.2",
-    "gatsby-plugin-postcss": "3.0.4",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-plugin-sitemap": "2.8.0",
-    "gatsby-source-filesystem": "2.4.2",
-    "gatsby-transformer-sharp": "^2.12.1",
-    "postcss": "8.1.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "gatsby": "^4.6.0",
+    "gatsby-background-image": "^1.6.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-breakpoints": "^1.3.6",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-manifest": "^4.6.0",
+    "gatsby-plugin-offline": "^5.6.0",
+    "gatsby-plugin-postcss": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^5.6.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-sitemap": "^5.6.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
+    "gbimage-bridge": "^0.2.1",
+    "postcss": "^8.4.5",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-responsive-carousel": "3.2.18",
-    "tailwindcss": "1.9.6"
+    "react-responsive-carousel": "^3.2.22",
+    "tailwindcss": "^3.0.18"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "^2.5.1"
   },
   "keywords": [
     "gatsby"
