--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@sendgrid/mail": "^7.7.0",
     "gatsby": "^4.6.0",
     "gatsby-background-image": "^1.6.0",
     "gatsby-image": "^3.11.0",
@@ -28,7 +29,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.34.2",
     "react-responsive-carousel": "^3.2.22",
+    "react-spinners": "^0.13.4",
     "tailwindcss": "^3.0.18"
   },
   "devDependencies": {
