--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,10 @@
-[build.environment]
-NODE_VERSION = "14.17.0"
+[build]
+command = "npm run build"
+publish = "public/"
+ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF . ../plugin/"
+
+[[plugins]]
+package = "@netlify/plugin-local-install-core"
 
 [[plugins]]
 package = "@netlify/plugin-gatsby"
