--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "tailwindcss": "^3.0.18"
   },
   "devDependencies": {
-    "gatsby-plugin-netlify": "^5.0.1",
+    "@netlify/plugin-gatsby": "^3.4.5",
     "prettier": "^2.5.1"
   },
   "keywords": [
