--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.4.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.34.2",
